# whispr

./: .gitignore  .pylintrc  Dockerfile  README  README.md  breeze_whispr.py  form.html  listener.py  messy_whispr.py  mock_users.json  number  poetry.Dockerfile  pyproject.toml  server_number  start_daemon  test_whispr.py  users.json  whispr.py
.github/workflows/: CI.yml  checks.yml  github_workflow_example.xml  python-app.yml
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  itertools.data.json  itertools.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/json/: __init__.data.json  __init__.meta.json  decoder.data.json  decoder.meta.json  encoder.data.json  encoder.meta.json
.mypy_cache/3.8/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
