[tool.poetry]
name = "whispr"
version = "0.1.0"
description = "social media over signal"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy-extensions = "^0.4.3"
bidict = "^0.21.2"
pydbus = "^0.6.0"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
phonenumbers = "^8.12.13"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
