[tool.poetry]
name = "whispr"
version = "0.1.0"
description = "social media over signal"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bidict = "^0.21.2"
phonenumbers = "^8.12.13"
Flask = "^2.0.1"
requests = "^2.25.1"
aiohttp = "^3.7.4"
asyncpg = "^0.23.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pylint = "^2.6.0"
mypy-extensions = "^0.4.3"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
